fix nav spacing

--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -134,3 +134,7 @@ body {
   border-style: solid;
   border-width: 10px;
 }
+
+a {
+  margin-top: 5px;
+}
